# finkey

./: .gitignore  CHANGELOG.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.claude/commands/: release.md
.claude/rules/: claude-agent-skills.md  claude-commands.md  claude-rules.md  debug-applied-context.md  documentation.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/git-pull-request/: SKILL.md
.github/workflows/: release.yml
docs/: README.md  branching.md  dependencies.md  versioning.md
docs/coding-standards/: rust.md
docs/git/: commit.md  pull-request.md
docs/prompting-standards/claude/: agent-skills.md  commands.md  rules.md
src/: about.css  about.html  about.ts  app.js  app.ts  constants.ts  index.html  keybindings.css  keybindings.html  keybindings.ts  keyguide.html  keyguide.ts  overlay.css  overlay.html  overlay.ts  search.html  search.ts  shortcuts.js  styles.css  tauri-api.ts  theme.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/defaults/: apps.json  keybindings.json  shortcuts.json
src-tauri/defaults/macos/: keybindings.json  settings.json
src-tauri/defaults/windows/: keybindings.json  settings.json
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: main.rs
