[package]
name = "shortcut-finder"
version = "1.0.0"
description = "Spotlight-like shortcut key finder"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open",
    "window-close",
    "window-hide",
    "window-show",
    "window-center",
    "window-set-focus",
    "global-shortcut-all",
    "system-tray"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# 以下は許可
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"  # tauri::commandの引数に必要
